# shougang-group-knowledge-portal

./: .drone.yml  .gitignore  README.md  docker-compose-dev.yaml  docker-compose.yaml
backend/: README.md  pyproject.toml
backend/app/: main.py  settings.py
backend/app/api/: dependencies.py  router.py
backend/app/clients/: bisheng.py
backend/app/config/: portal_config.py
backend/app/schemas/: admin_config_transfer.py  auth.py  bisheng_runtime.py  chat.py  knowledge.py  notification.py  portal_admin_config.py  portal_config.py  unified_auth_runtime.py
backend/app/services/: bisheng_runtime_service.py  chat_proxy_service.py  config_store.py  domain_consistency_service.py  domain_file_count_service.py  error_messages.py  knowledge_service.py  notification_service.py  portal_admin_config_store.py  portal_auth_service.py  portal_config_service.py  (+3 more)
backend/scripts/: refresh_space_file_counts.py
backend/tests/: conftest.py  test_admin_agent_config_api.py  test_admin_config_api.py  test_admin_upload_api.py  test_auth_api.py  test_auth_unified_api.py  test_bisheng_client.py  test_bisheng_runtime_service.py  test_bootstrap_api.py  test_domain_consistency_service.py  test_domain_file_count_service.py  test_domain_file_counts_api.py  test_knowledge_api.py  test_knowledge_favorite_schema.py  test_knowledge_service_favorite.py  test_notifications_api.py  test_portal_admin_config_store.py  test_portal_config_service.py  test_publish_precheck_api.py  test_qa_knowledge_scope_api.py  test_sqlite_config_storage.py  test_unified_auth_runtime_service.py
frontend/: index.html  (+5 more)
(+162 files in other folders)
